# Rternatives

./: CMakeLists.txt  CoOccurTest.hxx  README.md  main.cpp
include/: CoOccurTest.hxx  CommonOperations.hxx  Hypothesis.hxx  corTest.hxx  ks.hxx  utils.hxx
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  basic_check.cxx
tests/corTests/: CMakeLists.txt  correlationTests.cxx
